# suncov-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.md  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: linters.yml  tests.yml
docs/: START.md  run-dev.md
nginx/: nginx.conf
src/api/v1/: urls.py
src/api/v1/tests/unit/: test_urls.py
src/apps/dictation/: admin.py  apps.py
src/apps/dictation/api/: serializers.py
src/apps/dictation/api/view_sets/: dictation_view.py
src/apps/dictation/migrations/: 0001_initial.py  0002_alter_dictation_theme.py  0003_alter_dictation_options_alter_theme_options_and_more.py
src/apps/dictation/models/: dictation.py
src/apps/dictation/tests/integration/: test_viewsets.py
src/apps/partofspeech/: admin.py  apps.py
src/apps/partofspeech/api/: serializers.py
src/apps/partofspeech/migrations/: 0001_initial.py  0002_alter_partofspeech_options_alter_theme_options_and_more.py
src/apps/partofspeech/models/: part_of_speech.py
src/apps/quizz/: admin.py  apps.py  validators.py
src/apps/quizz/api/: serializers.py
src/apps/quizz/migrations/: 0001_initial.py  0002_remove_test_test_type_delete_testtype.py  0003_remove_test_slug.py
src/apps/quizz/models/: answer.py  question.py  test_.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py  settings.py
src/fixtures/: data.json
src/locale/ru/LC_MESSAGES/: django.po
src/static/admin/js/: duplicate_question.js
(+14 files in other folders)
